--- a/index.html
+++ b/index.html
@@ -1,1 +1,27 @@
-<h1>Hiigor2K</h1>
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+    <meta charset="UTF-8">
+    <title>Hiigor2K - Streamer</title>
+
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300;500&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/index.css">
+    
+</head>
+<body>
+    <header>
+        <img src="assets/img/logo.png" alt="Logo 2K">
+
+        <nav>
+            <a href="" lang="en">Skills</a>
+            <a href="">Projetos</a>
+            <a href="">Sobre</a>
+            <a href="">Contatos</a>
+            <a id="button" href="https://www.twitch.tv/hiigor2k" lang="en" style="color: #8E45FA;">Twitch</a>
+        </nav>
+    </header>
+</body>
+</html>
