Create the title component

--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <title>Hiigor2K</title>
 
     <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300;500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300;500&family=Press+Start+2P&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/components/title.css"> 
     
 </head>
 <body>
@@ -23,5 +24,6 @@
             <a id="button" href="https://www.twitch.tv/hiigor2k" lang="en" style="color: #8E45FA;">Twitch</a>
         </nav>
     </header>
+    <h1>Hiigor2K</h1>
 </body>
 </html>
