--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/components/title.css"> 
+    <link rel="stylesheet" href="css/components/subtitle.css">
     
 </head>
 <body>
@@ -25,5 +26,7 @@
         </nav>
     </header>
     <h1>Hiigor2K</h1>
+
+    <h2>Twitch Streamer</h2>
 </body>
 </html>
