Create the box component

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/components/title.css"> 
     <link rel="stylesheet" href="css/components/subtitle.css">
+    <link rel="stylesheet" href="css/components/box.css">
     
 </head>
 <body>
@@ -25,8 +26,11 @@
             <a id="button" href="https://www.twitch.tv/hiigor2k" lang="en" style="color: #8E45FA;">Twitch</a>
         </nav>
     </header>
-    <h1>Hiigor2K</h1>
 
-    <h2>Twitch Streamer</h2>
+    <div id="box">
+        <h1>Hiigor2K</h1>
+        <h2>Twitch Streamer</h2>
+    </div>
+
 </body>
 </html>
