Create the components

--- a/index.html
+++ b/index.html
@@ -8,29 +8,33 @@
     <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300;500&family=Press+Start+2P&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/components/title.css"> 
     <link rel="stylesheet" href="css/components/subtitle.css">
     <link rel="stylesheet" href="css/components/box.css">
+    <link rel="stylesheet" href="css/components/button.css">
+    <link rel="stylesheet" href="css/components/action.css">
+    <link rel="stylesheet" href="css/components/header.css">
     
 </head>
 <body>
-    <header>
+    <header class="header">
         <img src="assets/img/logo.png" alt="Logo 2K">
 
         <nav>
-            <a href="" lang="en">Skills</a>
-            <a href="">Projetos</a>
-            <a href="">Sobre</a>
-            <a href="">Contatos</a>
-            <a id="button" href="https://www.twitch.tv/hiigor2k" lang="en" style="color: #8E45FA;">Twitch</a>
+            <a class="action" href="" lang="en">Skills</a>
+            <a class="action" href="">Projetos</a>
+            <a class="action" href="">Sobre</a>
+            <a class="action" href="">Contatos</a>
+            <a class="button" href="https://www.twitch.tv/hiigor2k" lang="en" style="color: #8E45FA;">Twitch</a>
         </nav>
     </header>
 
-    <div id="box">
-        <h1>Hiigor2K</h1>
-        <h2>Twitch Streamer</h2>
+    <div class="box">
+        <h1 class="title">Hiigor2K</h1>
+        <h2 class="subtitle">Twitch Streamer</h2>
     </div>
 
+    <a class="button" href="https://www.twitch.tv/hiigor2k" lang="en" style="color: #8E45FA;">Twitch</a>
+    <a class="button" href="" style="color: #7E8DE3;">Discord</a>
 </body>
 </html>
