--- a/index.html
+++ b/index.html
@@ -8,12 +8,14 @@
     <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300;500&family=Press+Start+2P&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/components/header.css">
+    <link rel="stylesheet" href="css/components/banner.css">
     <link rel="stylesheet" href="css/components/title.css"> 
     <link rel="stylesheet" href="css/components/subtitle.css">
     <link rel="stylesheet" href="css/components/box.css">
     <link rel="stylesheet" href="css/components/button.css">
     <link rel="stylesheet" href="css/components/action.css">
-    <link rel="stylesheet" href="css/components/header.css">
+
     
 </head>
 <body>
@@ -29,12 +31,18 @@
         </nav>
     </header>
 
-    <div class="box">
-        <h1 class="title">Hiigor2K</h1>
-        <h2 class="subtitle">Twitch Streamer</h2>
-    </div>
-
-    <a class="button" href="https://www.twitch.tv/hiigor2k" lang="en" style="color: #8E45FA;">Twitch</a>
-    <a class="button" href="" style="color: #7E8DE3;">Discord</a>
+    <section class="banner">
+        <div class="wrapper">
+            <div class="box">
+                <h1 class="title">Hiigor2K</h1>
+                <h2 class="subtitle">Twitch Streamer</h2>
+            </div>
+        
+            <div class="navigation">
+                <a class="button" href="https://www.twitch.tv/hiigor2k" lang="en" style="color: #8E45FA;">Twitch</a>
+                <a class="button" href="" style="color: #7E8DE3;">Discord</a>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
