--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         
             <div class="navigation">
                 <a class="button" href="https://www.twitch.tv/hiigor2k" lang="en" style="color: #8E45FA;">Twitch</a>
-                <a class="button" href="" style="color: #7E8DE3;">Discord</a>
+                <a class="button" href="https://discord.gg/tJqSWV45ss" style="color: #7E8DE3;">Discord</a>
             </div>
         </div>
     </section>
