--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="css/components/box.css">
     <link rel="stylesheet" href="css/components/button.css">
     <link rel="stylesheet" href="css/components/action.css">
+    <link rel="stylesheet" href="css/components/wrapper-skill.css">
     <link rel="stylesheet" href="css/components/skill-tec.css">
     <link rel="stylesheet" href="css/components/progress-bar.css">
     
@@ -52,15 +53,80 @@
     <section class="section">
         <h2 class="main-title -second">Skills</h2>
 
-        <article class="skill-tec">
-            <img class="icon" src="img/ico_csgo.png" alt="Csgo Logo">
-            <div class="right">
-                <h3 class="title">CS:GO</h3>
-                <progress class="progress-bar" max="100" value="70">
-                    70%
-                </progress>
-            </div>
-        </article>
+        <div class="wrapper-skill">
+            <article class="skill-tec">
+                <img class="icon" src="img/ico_csgo.png" alt="Csgo Logo">
+                <div class="right">
+                    <h3 class="title">CS:GO</h3>
+                    <progress class="progress-bar" max="100" value="20">
+                        20%
+                    </progress>
+                </div>
+            </article>
+            <article class="skill-tec">
+                <img class="icon" src="img/ico_rf.png" alt="RF Logo">
+                <div class="right">
+                    <h3 class="title">RF Online</h3>
+                    <progress class="progress-bar" max="100" value="70">
+                        70%
+                    </progress>
+                </div>
+            </article>
+            <article class="skill-tec">
+                <img class="icon" src="img/ico_lol.png" alt="Lol Logo">
+                <div class="right">
+                    <h3 class="title">LOL</h3>
+                    <progress class="progress-bar" max="100" value="50">
+                        50%
+                    </progress>
+                </div>
+            </article>
+            <article class="skill-tec">
+                <img class="icon" src="img/ico_mine.png" alt="Mine Logo">
+                <div class="right">
+                    <h3 class="title">Mine Dungeons</h3>
+                    <progress class="progress-bar" max="100" value="65">
+                        65%
+                    </progress>
+                </div>
+            </article>
+            <article class="skill-tec">
+                <img class="icon" src="img/ico_valorant.png" alt="Valorant Logo">
+                <div class="right">
+                    <h3 class="title">Valorant</h3>
+                    <progress class="progress-bar" max="100" value="30">
+                        30%
+                    </progress>
+                </div>
+            </article>
+            <article class="skill-tec">
+                <img class="icon" src="img/ico_mm.png" alt="MM Logo">
+                <div class="right">
+                    <h3 class="title">Motorsport</h3>
+                    <progress class="progress-bar" max="100" value="55">
+                        55%
+                    </progress>
+                </div>
+            </article>
+            <article class="skill-tec">
+                <img class="icon" src="img/ico_tft.png" alt="TFT Logo">
+                <div class="right">
+                    <h3 class="title">TFT</h3>
+                    <progress class="progress-bar" max="100" value="60">
+                        60%
+                    </progress>
+                </div>
+            </article>
+            <article class="skill-tec">
+                <img class="icon" src="img/ico_astro.png" alt="Astro Logo">
+                <div class="right">
+                    <h3 class="title">Astroneer</h3>
+                    <progress class="progress-bar" max="100" value="85">
+                        85%
+                    </progress>
+                </div>
+            </article>
+        </div>
     </section>
 </body>
 </html>
